<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TOP1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.bimmersoft.promoprinting.MainActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/bg2" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/top3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_blueadress"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/btnBTAddress"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/text_white"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            android:id="@+id/tv_bluename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/tvBtName"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/text_color_orange"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btnBTConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSetting"
            app:layout_column="0"
            app:layout_row="1"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="98dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_Caption"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/orange_2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_column="0"
            app:layout_row="0"
            tools:layout_editor_absoluteX="20dp" />

        <Button
            android:id="@+id/btnStartSVC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnStart"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/btnSyncTakeShape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnStopSVC"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/btn_print_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/img_print"
            app:layout_column="0"
            app:layout_row="7" />

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrintTest1"
            app:layout_column="0"
            app:layout_row="8" />

        <Button
            android:id="@+id/btnShowContents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnPrintTest2"
            app:layout_column="0"
            app:layout_row="6" />

    </android.support.v7.widget.GridLayout>

</RelativeLayout>
